--- a/deploy/olm-catalog/ibm-helm-repo-operator/3.6.0/operator.ibm.com_helmrepos_crd.yaml
+++ b/deploy/olm-catalog/ibm-helm-repo-operator/3.6.0/operator.ibm.com_helmrepos_crd.yaml
@@ -2,11 +2,6 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: helmrepos.operator.ibm.com
-  labels:
-    name: helmrepos.operator.ibm.com
-    app.kubernetes.io/instance: helmrepos.operator.ibm.com
-    app.kubernetes.io/managed-by: helmrepos.operator.ibm.com
-    app.kubernetes.io/name: helmrepos.operator.ibm.com
 spec:
   group: operator.ibm.com
   names:
@@ -16,7 +11,8 @@ spec:
     singular: helmrepo
   scope: Namespaced
   subresources:
-    status: {}
+    status: 
+      description: 'placeholder description'
   validation:
     openAPIV3Schema:
       description: HelmRepo is the Schema for the helmrepos API
@@ -34,15 +30,13 @@ spec:
         spec:
           properties:
             auditService:
-              type: object
               properties:
                 config:
-                  type: object
                   properties:
                     enabled:
                      type: boolean
-                image:
                   type: object
+                image:
                   properties:
                     imageRegistry:
                       type: string
@@ -52,11 +46,11 @@ spec:
                       type: string
                     tag:
                       type: string
-            helmrepo:
+                  type: object
               type: object
+            helmrepo:
               properties:
                 image:
-                  type: object
                   properties:
                     imageRegistry:
                       type: string
@@ -66,6 +60,7 @@ spec:
                       type: string
                     tag:
                       type: string
+                  type: object
                 resources:
                   type: object
                   properties:
@@ -83,7 +78,6 @@ spec:
                           type: string
                         memory:
                           type: string
-            nodeSelector:
               type: object
             replicaCount:
               type: integer
@@ -121,7 +115,7 @@ spec:
       required:
       - metadata
       - spec     
-      #type: object #will need to uncomment this line out down the road
+      type: object
   version: v1
   versions:
   - name: v1
