--- a/deploy/olm-catalog/ibm-helm-repo-operator/3.6.0/operator.ibm.com_helmrepos_crd.yaml
+++ b/deploy/olm-catalog/ibm-helm-repo-operator/3.6.0/operator.ibm.com_helmrepos_crd.yaml
@@ -2,6 +2,11 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: helmrepos.operator.ibm.com
+  labels:
+    name: helmrepos.operator.ibm.com
+    app.kubernetes.io/instance: helmrepos.operator.ibm.com
+    app.kubernetes.io/managed-by: helmrepos.operator.ibm.com
+    app.kubernetes.io/name: helmrepos.operator.ibm.com
 spec:
   group: operator.ibm.com
   names:
