--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -43,8 +43,7 @@ spec:
                   - s390x
       containers:
         - name: ibm-helm-repo-operator
-          # Replace this with the built image name
-          image: quay.io/opencloudio/ibm-helm-repo-operator:latest
+          image: quay.io/opencloudio/ibm-helm-repo-operator:3.5.0 #make sure to update this to 3.6.0 when available
           imagePullPolicy: Always
           env:
             - name: WATCH_NAMESPACE
