--- a/deploy/olm-catalog/ibm-helm-repo-operator/3.6.0/ibm-helm-repo-operator.v3.6.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/ibm-helm-repo-operator/3.6.0/ibm-helm-repo-operator.v3.6.0.clusterserviceversion.yaml
@@ -63,7 +63,7 @@ metadata:
           "apiVersion":"operator.ibm.com/v1alpha1",
           "kind":"OperandRequest",
           "metadata":{
-            "name":"helm-api-request"
+            "name":"helm-repo-request"
           },
           "spec":{
             "requests":[
