--- a/helm-charts/helm-repo/templates/deployment.yaml
+++ b/helm-charts/helm-repo/templates/deployment.yaml
@@ -92,7 +92,7 @@ spec:
             memory: {{ .Values.auditService.resources.limits.memory }}
           requests:
             cpu: {{ .Values.auditService.resources.requests.cpu }}
-            memory: {{ .Values.auditService.resources.requests.cpu }}
+            memory: {{ .Values.auditService.resources.requests.memory }}
       {{ end }}
 
       - name: {{ .Values.helmrepo.image.name }}
