uncomment type line

--- a/deploy/olm-catalog/ibm-helm-repo-operator/3.6.0/operator.ibm.com_helmrepos_crd.yaml
+++ b/deploy/olm-catalog/ibm-helm-repo-operator/3.6.0/operator.ibm.com_helmrepos_crd.yaml
@@ -134,7 +134,7 @@ spec:
       required:
       - metadata
       - spec     
-      #type: object #will need to uncomment this line out down the road
+      type: object #will need to uncomment this line out down the road
   version: v1
   versions:
   - name: v1
