Had to clean up a few things (#37)
* ValuesMetadataStructureMatchesValues & DefinedParametersAreUsed

* NoLatestImageTags & RequiredMetadataLabelsDefined

* updates based on pr feedback

* re-add auditService.resources

* re-add resources for auditService

* generated new csv

* update csv

* typo

* forgot a comma

* resolve linting errors after putting resources back in

* typo

* uncomment type line

Co-authored-by: Ben Luzarraga <luzarragaben@Bens-MBP.attlocal.net>

--- a/helm-charts/helm-repo/templates/deployment.yaml
+++ b/helm-charts/helm-repo/templates/deployment.yaml
@@ -88,11 +88,11 @@ spec:
           mountPath: "/var/log/audit"
         resources:
           limits:
-            cpu: 100m
-            memory: 128Mi
+            cpu: {{ .Values.auditService.resources.limits.cpu }}
+            memory: {{ .Values.auditService.resources.limits.memory }}
           requests:
-            cpu: 50m
-            memory: 128Mi
+            cpu: {{ .Values.auditService.resources.requests.cpu }}
+            memory: {{ .Values.auditService.resources.requests.memory }}
       {{ end }}
 
       - name: {{ .Values.helmrepo.image.name }}
