--- a/deploy/crds/operator.ibm.com_v1_helmrepo_cr.yaml
+++ b/deploy/crds/operator.ibm.com_v1_helmrepo_cr.yaml
@@ -16,6 +16,7 @@ spec:
       pullPolicy: IfNotPresent
       repository: icp-audit-service
       tag: 3.4.0
+      sha: "sha256:334fae7bd3ae4c04611f4e82207a2f7836dbc589f7fc2b3cd172bd93572bfe16"
     resources:
       limits:
         cpu: 200m
@@ -29,6 +30,7 @@ spec:
       pullPolicy: IfNotPresent
       repository: icp-helm-repo
       tag: 3.3.0
+      sha: "sha256:bc95dc9703c0d26ad3af1004bbe4b236781ebd84082df430108948897dfabfe2"
     resources:
       limits:
         cpu: 100m
