--- a/helm-charts/helm-repo/values.yaml
+++ b/helm-charts/helm-repo/values.yaml
@@ -7,6 +7,7 @@ auditService:
     pullPolicy: IfNotPresent
     repository: icp-audit-service
     tag: 3.4.0
+    sha: "sha256:334fae7bd3ae4c04611f4e82207a2f7836dbc589f7fc2b3cd172bd93572bfe16"
   name: icp-audit-service
   resources:
     limits:
@@ -32,6 +33,7 @@ helmrepo:
     pullPolicy: IfNotPresent
     repository: icp-helm-repo
     tag: 3.3.0
+    sha: "sha256:bc95dc9703c0d26ad3af1004bbe4b236781ebd84082df430108948897dfabfe2"
   resources:
     limits:
       cpu: 100m
