--- a/helm-charts/helm-repo/templates/deployment.yaml
+++ b/helm-charts/helm-repo/templates/deployment.yaml
@@ -23,7 +23,6 @@ spec:
   template:
     metadata:
       annotations:
-        seccomp.security.alpha.kubernetes.io/pod: docker/default
         productName: IBM Cloud Platform Common Services
         productID: "068a62892a1e4db39641342e592daa25"
         productVersion: "3.3.0"
@@ -39,7 +38,7 @@ spec:
         app.kubernetes.io/name: "helm-repo"
         helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     spec:
-      serviceAccount: helm-repo-sa
+      serviceAccount: ibm-helm-repo-operand
       affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
