--- a/helm-charts/helm-repo/templates/rbac.yaml
+++ b/helm-charts/helm-repo/templates/rbac.yaml
@@ -1,48 +1,48 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata: 
-  name: helm-repo-sa
+  name: ibm-helm-repo-operand
   labels:
-    name: helm-repo-sa
-    app.kubernetes.io/instance: helmrepos.operator.ibm.com
-    app.kubernetes.io/managed-by: helmrepos.operator.ibm.com
-    app.kubernetes.io/name: helmrepos.operator.ibm.com
-    helm.sh/chart: helm-repo
+    name: ibm-helm-repo-operand
+    app.kubernetes.io/instance: "{{ .Release.Name }}"
+    app.kubernetes.io/managed-by: "{{ .Release.Service }}"
+    app.kubernetes.io/name: "helm-repo"
+    helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: helm-repo-privileged-role
+  name: ibm-helm-repo-operand
   labels:
-    name: helm-repo-privileged-role
-    app.kubernetes.io/instance: helmrepos.operator.ibm.com
-    app.kubernetes.io/managed-by: helmrepos.operator.ibm.com
-    app.kubernetes.io/name: helmrepos.operator.ibm.com
-    helm.sh/chart: helm-repo
+    name: ibm-helm-repo-operand
+    app.kubernetes.io/instance: "{{ .Release.Name }}"
+    app.kubernetes.io/managed-by: "{{ .Release.Service }}"
+    app.kubernetes.io/name: "helm-repo"
+    helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
 rules:
 - apiGroups:
   - security.openshift.io 
   resources:
   - securitycontextconstraints 
   resourceNames:
-  - privileged
+  -  privileged
   verbs:
   - use
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: helm-repo-privileged
+  name: ibm-helm-repo-operand
   labels:
-    name: helm-repo-privileged
-    app.kubernetes.io/instance: helmrepos.operator.ibm.com
-    app.kubernetes.io/managed-by: helmrepos.operator.ibm.com
-    app.kubernetes.io/name: helmrepos.operator.ibm.com
-    helm.sh/chart: helm-repo
+    name: ibm-helm-repo-operand
+    app.kubernetes.io/instance: "{{ .Release.Name }}"
+    app.kubernetes.io/managed-by: "{{ .Release.Service }}"
+    app.kubernetes.io/name: "helm-repo"
+    helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
 subjects:
 - kind: ServiceAccount
-  name: helm-repo-sa
+  name: ibm-helm-repo-operand
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: helm-repo-privileged-role
+  name: ibm-helm-repo-operand
