--- a/helm-charts/helm-repo/values-metadata.yaml
+++ b/helm-charts/helm-repo/values-metadata.yaml
@@ -54,7 +54,7 @@ helmrepo:
     sha:
       __metadata:
         label: "Catalog image digest"
-        description: "Catalog image digest"
+        description: "Catalog image digest."
         type: "string"
         required: false
         immutable: false
@@ -264,6 +264,13 @@ auditService:
         description: "Docker image tag"
         type: "string"
         required: false
+    sha:
+      __metadata:
+        label: "audit service image digest"
+        description: "audit service image digest."
+        type: "string"
+        required: false
+        immutable: false
     pullPolicy:
       __metadata:
         label: "Image pull policy"
