--- a/helm-charts/helm-repo/values-metadata.yaml
+++ b/helm-charts/helm-repo/values-metadata.yaml
@@ -53,8 +53,8 @@ helmrepo:
         required: true
     sha:
       __metadata:
-        label: "Catalog image digest"
-        description: "Catalog image digest"
+        label: "Helm Repo image digest"
+        description: "Helm Repo image digest."
         type: "string"
         required: false
         immutable: false
@@ -264,6 +264,13 @@ auditService:
         description: "Docker image tag"
         type: "string"
         required: false
+    sha:
+      __metadata:
+        label: "audit service image digest"
+        description: "audit service image digest."
+        type: "string"
+        required: false
+        immutable: false
     pullPolicy:
       __metadata:
         label: "Image pull policy"
