--- a/helm-charts/helm-repo/values.yaml
+++ b/helm-charts/helm-repo/values.yaml
@@ -6,8 +6,8 @@ auditService:
     imageRegistry: quay.io/opencloudio
     pullPolicy: IfNotPresent
     repository: icp-audit-service
-    tag: 3.4.0
-    sha: "sha256:334fae7bd3ae4c04611f4e82207a2f7836dbc589f7fc2b3cd172bd93572bfe16"
+    tag: 3.4.1
+    sha: "24a220374c39652f8b031637d852995bfaec5be2601f9e4c41eb1925531f466d"
   name: icp-audit-service
   resources:
     limits:
