--- a/watches.yaml
+++ b/watches.yaml
@@ -3,3 +3,6 @@
   group: operator.ibm.com
   kind: HelmRepo
   chart: helm-charts/helm-repo
+  overrideValues:
+    auditService.image.repository: ${OPERAND_AUDIT_SERVICE_IMAGE}
+    helmrepo.image.repository: ${OPERAND_HELM_REPO_IMAGE}
