--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -3,10 +3,10 @@ kind: Deployment
 metadata:
   name: ibm-helm-repo-operator
   labels:
-      name: ibm-helm-repo-operator
-      app.kubernetes.io/instance: helmrepos.operator.ibm.com
-      app.kubernetes.io/managed-by: helmrepos.operator.ibm.com
-      app.kubernetes.io/name: helmrepos.operator.ibm.com
+    name: ibm-helm-repo-operator
+    app.kubernetes.io/instance: helmrepos.operator.ibm.com
+    app.kubernetes.io/managed-by: helmrepos.operator.ibm.com
+    app.kubernetes.io/name: helmrepos.operator.ibm.com
 spec:
   replicas: 1
   selector:
@@ -43,6 +43,7 @@ spec:
                   - s390x
       containers:
         - name: ibm-helm-repo-operator
+          # Replace this with the built image name
           image: quay.io/opencloudio/ibm-helm-repo-operator:latest
           imagePullPolicy: Always
           env:
@@ -56,6 +57,10 @@ spec:
                   fieldPath: metadata.name
             - name: OPERATOR_NAME
               value: "ibm-helm-repo-operator"
+            - name: OPERAND_AUDIT_SERVICE_IMAGE
+              value: "quay.io/opencloudio/icp-audit-service@sha256:24a220374c39652f8b031637d852995bfaec5be2601f9e4c41eb1925531f466d"
+            - name: OPERAND_HELM_REPO_IMAGE
+              value: "quay.io/opencloudio/icp-helm-repo@sha256:bc95dc9703c0d26ad3af1004bbe4b236781ebd84082df430108948897dfabfe2"
           resources:
             limits:
               cpu: 150m
