--- a/helm-charts/helm-repo/values.yaml
+++ b/helm-charts/helm-repo/values.yaml
@@ -3,11 +3,8 @@ auditService:
   config:
     enabled: true
   image:
-    imageRegistry: quay.io/opencloudio
     pullPolicy: IfNotPresent
-    repository: icp-audit-service
-    tag: 3.4.0
-    sha: "sha256:334fae7bd3ae4c04611f4e82207a2f7836dbc589f7fc2b3cd172bd93572bfe16"
+    repository: quay.io/opencloudio/icp-audit-service@sha256:24a220374c39652f8b031637d852995bfaec5be2601f9e4c41eb1925531f466d
   name: icp-audit-service
   resources:
     limits:
@@ -29,11 +26,8 @@ helmrepo:
     PROXY_ROUTE: helm-repo
   image:
     name: helm-repo
-    imageRegistry: quay.io/opencloudio
     pullPolicy: IfNotPresent
-    repository: icp-helm-repo
-    tag: 3.3.0
-    sha: "sha256:bc95dc9703c0d26ad3af1004bbe4b236781ebd84082df430108948897dfabfe2"
+    repository: quay.io/opencloudio/icp-helm-repo@sha256:bc95dc9703c0d26ad3af1004bbe4b236781ebd84082df430108948897dfabfe2
   resources:
     limits:
       cpu: 100m
