change instance to match operand

--- a/deploy/service_account.yaml
+++ b/deploy/service_account.yaml
@@ -4,6 +4,6 @@ metadata:
   name: ibm-helm-repo-operator
   labels:
     name: ibm-helm-repo-operator
-    app.kubernetes.io/instance: helmrepos.operator.ibm.com
+    app.kubernetes.io/instance: helm-repo
     app.kubernetes.io/managed-by: helmrepos.operator.ibm.com
     app.kubernetes.io/name: helmrepos.operator.ibm.com
