--- a/deploy/crds/operator.ibm.com_v1alpha1_helmrepo_cr.yaml
+++ b/deploy/crds/operator.ibm.com_v1alpha1_helmrepo_cr.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     helm.operator-sdk/upgrade-force: "True"
   labels:
-    app.kubernetes.io/instance: helmrepos.operator.ibm.com
+    app.kubernetes.io/instance: helm-repo
     app.kubernetes.io/managed-by: helmrepos.operator.ibm.com
     app.kubernetes.io/name: helm-repo
 spec:
