--- a/deploy/olm-catalog/ibm-helm-repo-operator/3.6.0/ibm-helm-repo-operator.v3.6.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/ibm-helm-repo-operator/3.6.0/ibm-helm-repo-operator.v3.6.0.clusterserviceversion.yaml
@@ -12,7 +12,7 @@ metadata:
               "helm.operator-sdk/upgrade-force": "True"
             },
             "labels": {
-              "app.kubernetes.io/instance": "helmrepos.operator.ibm.com",
+              "app.kubernetes.io/instance": "helm-repo",
               "app.kubernetes.io/managed-by": "helmrepos.operator.ibm.com",
               "app.kubernetes.io/name": "helm-repo"
             },
