--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ibm-helm-repo-operator
   labels:
     name: ibm-helm-repo-operator
-    app.kubernetes.io/instance: helmrepos.operator.ibm.com
+    app.kubernetes.io/instance: helm-repo
     app.kubernetes.io/managed-by: helmrepos.operator.ibm.com
     app.kubernetes.io/name: helmrepos.operator.ibm.com
 spec:
@@ -17,7 +17,7 @@ spec:
       name: ibm-helm-repo-operator
       labels:
         name: ibm-helm-repo-operator
-        app.kubernetes.io/instance: helmrepos.operator.ibm.com
+        app.kubernetes.io/instance: helm-repo
         app.kubernetes.io/managed-by: helmrepos.operator.ibm.com
         app.kubernetes.io/name: helmrepos.operator.ibm.com
       annotations:
