--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: ibm-helm-repo-operator
   labels:
     name: ibm-helm-repo-operator
-    app.kubernetes.io/instance: helmrepos.operator.ibm.com
+    app.kubernetes.io/instance: helm-repo
     app.kubernetes.io/managed-by: helmrepos.operator.ibm.com
     app.kubernetes.io/name: helmrepos.operator.ibm.com
 rules:
@@ -116,7 +116,7 @@ metadata:
   name: ibm-helm-repo-operator
   labels:
     name: ibm-helm-repo-operator
-    app.kubernetes.io/instance: helmrepos.operator.ibm.com
+    app.kubernetes.io/instance: helm-repo
     app.kubernetes.io/managed-by: helmrepos.operator.ibm.com
     app.kubernetes.io/name: helmrepos.operator.ibm.com
 rules:
