change instance name to match operand (#53)
* change instance to match operand

* typo

Co-authored-by: Ben Luzarraga <luzarragaben@Bens-MBP.attlocal.net>

--- a/deploy/olm-catalog/ibm-helm-repo-operator/3.6.0/operator.ibm.com_helmrepos_crd.yaml
+++ b/deploy/olm-catalog/ibm-helm-repo-operator/3.6.0/operator.ibm.com_helmrepos_crd.yaml
@@ -4,7 +4,7 @@ metadata:
   name: helmrepos.operator.ibm.com
   labels:
     name: helmrepos.operator.ibm.com
-    app.kubernetes.io/instance: helmrepos.operator.ibm.com
+    app.kubernetes.io/instance: helm-repo
     app.kubernetes.io/managed-by: helmrepos.operator.ibm.com
     app.kubernetes.io/name: helmrepos.operator.ibm.com
 spec:
