--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -57,6 +57,8 @@ spec:
                   fieldPath: metadata.name
             - name: OPERATOR_NAME
               value: "ibm-helm-repo-operator"
+            - name: OPERAND_AUDIT_SERVICE_ENABLED
+              value: "false"
             - name: OPERAND_AUDIT_SERVICE_IMAGE
               value: "quay.io/opencloudio/icp-audit-service@sha256:24a220374c39652f8b031637d852995bfaec5be2601f9e4c41eb1925531f466d"
             - name: OPERAND_HELM_REPO_IMAGE
