--- a/helm-charts/helm-repo/values.yaml
+++ b/helm-charts/helm-repo/values.yaml
@@ -1,7 +1,7 @@
 # arch: ""
 auditService:
   config:
-    enabled: true
+    enabled: false
   image:
     pullPolicy: IfNotPresent
     repository: quay.io/opencloudio/icp-audit-service@sha256:24a220374c39652f8b031637d852995bfaec5be2601f9e4c41eb1925531f466d
