37961: disable audit logging by default (#54)
* 37961: disable audit logging by default

* update app.kubernetes.io/instance

* fix linting error

--- a/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
+++ b/deploy/crds/operator.ibm.com_helmrepos_crd.yaml
@@ -4,7 +4,7 @@ metadata:
   name: helmrepos.operator.ibm.com
   labels:
     name: helmrepos.operator.ibm.com
-    app.kubernetes.io/instance: helmrepos.operator.ibm.com
+    app.kubernetes.io/instance: helm-repo
     app.kubernetes.io/managed-by: helmrepos.operator.ibm.com
     app.kubernetes.io/name: helmrepos.operator.ibm.com
 spec:
@@ -33,30 +33,6 @@ spec:
           type: string
         spec:
           properties:
-            auditService:
-              properties:
-                config:
-                  properties:
-                    enabled:
-                     type: boolean
-                  type: object
-                resources:
-                  properties:
-                    limits:
-                      properties:
-                        cpu:
-                          type: string
-                        memory:
-                          type: string
-                      type: object
-                    requests:
-                      properties:
-                        cpu:
-                          type: string
-                        memory:
-                          type: string
-                      type: object
-                  type: object
             helmrepo:
               properties:
                 resources:
