--- a/deploy/olm-catalog/ibm-helm-repo-operator/ibm-helm-repo-operator.package.yaml
+++ b/deploy/olm-catalog/ibm-helm-repo-operator/ibm-helm-repo-operator.package.yaml
@@ -1,6 +1,8 @@
 channels:
 - currentCSV: ibm-helm-repo-operator.v3.6.0
   name: dev
+- currentCSV: ibm-helm-repo-operator.v3.6.0
+  name: beta
 - currentCSV: ibm-helm-repo-operator.v3.5.0
   name: stable-v1
 defaultChannel: stable-v1
