--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -44,7 +44,7 @@ spec:
       containers:
         - name: ibm-helm-repo-operator
           # Replace this with the built image name
-          image: quay.io/opencloudio/ibm-helm-repo-operator:latest
+          image: quay.io/opencloudio/ibm-helm-repo-operator@sha256:921bf66233e11a5ab663ea09dd3e30de70427821d0881cb7eaf234ac987fcd47
           imagePullPolicy: Always
           env:
             - name: WATCH_NAMESPACE
