--- a/deploy/olm-catalog/ibm-helm-repo-operator/3.6.1/ibm-helm-repo-operator.v3.6.1.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/ibm-helm-repo-operator/3.6.1/ibm-helm-repo-operator.v3.6.1.clusterserviceversion.yaml
@@ -69,11 +69,11 @@ metadata:
     capabilities: Seamless Upgrades
     categories: Developer Tools
     certified: "false"
-    containerImage: quay.io/opencloudio/ibm-helm-repo-operator@sha256:921bf66233e11a5ab663ea09dd3e30de70427821d0881cb7eaf234ac987fcd47
+    containerImage: quay.io/opencloudio/ibm-helm-repo-operator:latest
     createdAt: "2020-05-16"
     description: Helm Repo is a helm chart repository for storing and supplying IBM
       and local charts.
-    olm.skipRange: ">=3.5.0 <3.6.0"
+    olm.skipRange: '>=3.5.0 <3.6.1'
     repository: https://github.com/IBM/ibm-helm-repo-operator
     support: IBM
   name: ibm-helm-repo-operator.v3.6.1
@@ -236,7 +236,7 @@ spec:
                   value: quay.io/opencloudio/icp-audit-service@sha256:24a220374c39652f8b031637d852995bfaec5be2601f9e4c41eb1925531f466d
                 - name: OPERAND_HELM_REPO_IMAGE
                   value: quay.io/opencloudio/icp-helm-repo@sha256:bc95dc9703c0d26ad3af1004bbe4b236781ebd84082df430108948897dfabfe2
-                image: quay.io/opencloudio/ibm-helm-repo-operator@sha256:921bf66233e11a5ab663ea09dd3e30de70427821d0881cb7eaf234ac987fcd47
+                image: quay.io/opencloudio/ibm-helm-repo-operator:latest
                 imagePullPolicy: Always
                 name: ibm-helm-repo-operator
                 resources:
